plang/testing/logs/false-incorrect/58/program58.p.p.out
Error at kt (tfBC7 (oMWB (fsfe) (ueL) (Lhg) (o)) (U) (Rsn1)) x pe8u :- (rFMN Uyh).:1:61 error: 
kt (tfBC7 (oMWB (fsfe) (ueL) (Lhg) (o)) (U) (Rsn1)) x pe8u :- (rFMN Uyh).
                                                            ^
Error at kt (tfBC7 (oMWB (fsfe) (ueL) (Lhg) (o)) (U) (Rsn1)) x pe8u :- (rFMN Uyh).:1:71 error: 
kt (tfBC7 (oMWB (fsfe) (ueL) (Lhg) (o)) (U) (Rsn1)) x pe8u :- (rFMN Uyh).
                                                                      ^
Error at x2YAY nQG (o1vYi (OnxKX) s934E (LnqK)) (r9Hx (w1d Tao) (b (W) F1c (UadM5)) (rF) F) FTIc :- ((g8fL M0ti; p66s (Y) t, l2pp5 bjHzT, fF7Vm (M4RH), nUnlY sx SI, aZqZr enX3 M (SH) (kog (ob gN4) (sW gv9YB (aT4lR p T)) (EgM) gb); hTMZ (fw2y (KYmPJ) (Xfy)) (CFCJ) z)).:2:90 error: 
x2YAY nQG (o1vYi (OnxKX) s934E (LnqK)) (r9Hx (w1d Tao) (b (W) F1c (UadM5)) (rF) F) FTIc :- ((g8fL M0ti; p66s (Y) t, l2pp5 bjHzT, fF7Vm (M4RH), nUnlY sx SI, aZqZr enX3 M (SH) (kog (ob gN4) (sW gv9YB (aT4lR p T)) (EgM) gb); hTMZ (fw2y (KYmPJ) (Xfy)) (CFCJ) z)).
                                                                                         ^
Error at x2YAY nQG (o1vYi (OnxKX) s934E (LnqK)) (r9Hx (w1d Tao) (b (W) F1c (UadM5)) (rF) F) FTIc :- ((g8fL M0ti; p66s (Y) t, l2pp5 bjHzT, fF7Vm (M4RH), nUnlY sx SI, aZqZr enX3 M (SH) (kog (ob gN4) (sW gv9YB (aT4lR p T)) (EgM) gb); hTMZ (fw2y (KYmPJ) (Xfy)) (CFCJ) z)).:2:102 error: 
x2YAY nQG (o1vYi (OnxKX) s934E (LnqK)) (r9Hx (w1d Tao) (b (W) F1c (UadM5)) (rF) F) FTIc :- ((g8fL M0ti; p66s (Y) t, l2pp5 bjHzT, fF7Vm (M4RH), nUnlY sx SI, aZqZr enX3 M (SH) (kog (ob gN4) (sW gv9YB (aT4lR p T)) (EgM) gb); hTMZ (fw2y (KYmPJ) (Xfy)) (CFCJ) z)).
                                                                                                     ^
Error at x2YAY nQG (o1vYi (OnxKX) s934E (LnqK)) (r9Hx (w1d Tao) (b (W) F1c (UadM5)) (rF) F) FTIc :- ((g8fL M0ti; p66s (Y) t, l2pp5 bjHzT, fF7Vm (M4RH), nUnlY sx SI, aZqZr enX3 M (SH) (kog (ob gN4) (sW gv9YB (aT4lR p T)) (EgM) gb); hTMZ (fw2y (KYmPJ) (Xfy)) (CFCJ) z)).:2:114 error: 
x2YAY nQG (o1vYi (OnxKX) s934E (LnqK)) (r9Hx (w1d Tao) (b (W) F1c (UadM5)) (rF) F) FTIc :- ((g8fL M0ti; p66s (Y) t, l2pp5 bjHzT, fF7Vm (M4RH), nUnlY sx SI, aZqZr enX3 M (SH) (kog (ob gN4) (sW gv9YB (aT4lR p T)) (EgM) gb); hTMZ (fw2y (KYmPJ) (Xfy)) (CFCJ) z)).
                                                                                                                 ^
Error at x2YAY nQG (o1vYi (OnxKX) s934E (LnqK)) (r9Hx (w1d Tao) (b (W) F1c (UadM5)) (rF) F) FTIc :- ((g8fL M0ti; p66s (Y) t, l2pp5 bjHzT, fF7Vm (M4RH), nUnlY sx SI, aZqZr enX3 M (SH) (kog (ob gN4) (sW gv9YB (aT4lR p T)) (EgM) gb); hTMZ (fw2y (KYmPJ) (Xfy)) (CFCJ) z)).:2:127 error: 
x2YAY nQG (o1vYi (OnxKX) s934E (LnqK)) (r9Hx (w1d Tao) (b (W) F1c (UadM5)) (rF) F) FTIc :- ((g8fL M0ti; p66s (Y) t, l2pp5 bjHzT, fF7Vm (M4RH), nUnlY sx SI, aZqZr enX3 M (SH) (kog (ob gN4) (sW gv9YB (aT4lR p T)) (EgM) gb); hTMZ (fw2y (KYmPJ) (Xfy)) (CFCJ) z)).
                                                                                                                              ^
Error at x2YAY nQG (o1vYi (OnxKX) s934E (LnqK)) (r9Hx (w1d Tao) (b (W) F1c (UadM5)) (rF) F) FTIc :- ((g8fL M0ti; p66s (Y) t, l2pp5 bjHzT, fF7Vm (M4RH), nUnlY sx SI, aZqZr enX3 M (SH) (kog (ob gN4) (sW gv9YB (aT4lR p T)) (EgM) gb); hTMZ (fw2y (KYmPJ) (Xfy)) (CFCJ) z)).:2:141 error: 
x2YAY nQG (o1vYi (OnxKX) s934E (LnqK)) (r9Hx (w1d Tao) (b (W) F1c (UadM5)) (rF) F) FTIc :- ((g8fL M0ti; p66s (Y) t, l2pp5 bjHzT, fF7Vm (M4RH), nUnlY sx SI, aZqZr enX3 M (SH) (kog (ob gN4) (sW gv9YB (aT4lR p T)) (EgM) gb); hTMZ (fw2y (KYmPJ) (Xfy)) (CFCJ) z)).
                                                                                                                                            ^
Error at x2YAY nQG (o1vYi (OnxKX) s934E (LnqK)) (r9Hx (w1d Tao) (b (W) F1c (UadM5)) (rF) F) FTIc :- ((g8fL M0ti; p66s (Y) t, l2pp5 bjHzT, fF7Vm (M4RH), nUnlY sx SI, aZqZr enX3 M (SH) (kog (ob gN4) (sW gv9YB (aT4lR p T)) (EgM) gb); hTMZ (fw2y (KYmPJ) (Xfy)) (CFCJ) z)).:2:154 error: 
x2YAY nQG (o1vYi (OnxKX) s934E (LnqK)) (r9Hx (w1d Tao) (b (W) F1c (UadM5)) (rF) F) FTIc :- ((g8fL M0ti; p66s (Y) t, l2pp5 bjHzT, fF7Vm (M4RH), nUnlY sx SI, aZqZr enX3 M (SH) (kog (ob gN4) (sW gv9YB (aT4lR p T)) (EgM) gb); hTMZ (fw2y (KYmPJ) (Xfy)) (CFCJ) z)).
                                                                                                                                                         ^
Error at x2YAY nQG (o1vYi (OnxKX) s934E (LnqK)) (r9Hx (w1d Tao) (b (W) F1c (UadM5)) (rF) F) FTIc :- ((g8fL M0ti; p66s (Y) t, l2pp5 bjHzT, fF7Vm (M4RH), nUnlY sx SI, aZqZr enX3 M (SH) (kog (ob gN4) (sW gv9YB (aT4lR p T)) (EgM) gb); hTMZ (fw2y (KYmPJ) (Xfy)) (CFCJ) z)).:2:220 error: 
x2YAY nQG (o1vYi (OnxKX) s934E (LnqK)) (r9Hx (w1d Tao) (b (W) F1c (UadM5)) (rF) F) FTIc :- ((g8fL M0ti; p66s (Y) t, l2pp5 bjHzT, fF7Vm (M4RH), nUnlY sx SI, aZqZr enX3 M (SH) (kog (ob gN4) (sW gv9YB (aT4lR p T)) (EgM) gb); hTMZ (fw2y (KYmPJ) (Xfy)) (CFCJ) z)).
                                                                                                                                                                                                                           ^
Error at x2YAY nQG (o1vYi (OnxKX) s934E (LnqK)) (r9Hx (w1d Tao) (b (W) F1c (UadM5)) (rF) F) FTIc :- ((g8fL M0ti; p66s (Y) t, l2pp5 bjHzT, fF7Vm (M4RH), nUnlY sx SI, aZqZr enX3 M (SH) (kog (ob gN4) (sW gv9YB (aT4lR p T)) (EgM) gb); hTMZ (fw2y (KYmPJ) (Xfy)) (CFCJ) z)).:2:256 error: 
x2YAY nQG (o1vYi (OnxKX) s934E (LnqK)) (r9Hx (w1d Tao) (b (W) F1c (UadM5)) (rF) F) FTIc :- ((g8fL M0ti; p66s (Y) t, l2pp5 bjHzT, fF7Vm (M4RH), nUnlY sx SI, aZqZr enX3 M (SH) (kog (ob gN4) (sW gv9YB (aT4lR p T)) (EgM) gb); hTMZ (fw2y (KYmPJ) (Xfy)) (CFCJ) z)).
                                                                                                                                                                                                                                                               ^
Error at ? (rF (BZA) (cmHw (s egVxC (hDyoS (mXD6z (RtAO) (oyObn) (ihAoc dsSxl xOCp (R35)) keQ2Z) m pd N) (w6Mn v2N (TxM)) (I1TZl)))).:12:1 error: 
? (rF (BZA) (cmHw (s egVxC (hDyoS (mXD6z (RtAO) (oyObn) (ihAoc dsSxl xOCp (R35)) keQ2Z) m pd N) (w6Mn v2N (TxM)) (I1TZl)))).
^