plang/testing/logs/false-incorrect/58/program58.p.p
kt (tfBC7 (oMWB (fsfe) (ueL) (Lhg) (o)) (U) (Rsn1)) x pe8u :- (rFMN Uyh).
x2YAY nQG (o1vYi (OnxKX) s934E (LnqK)) (r9Hx (w1d Tao) (b (W) F1c (UadM5)) (rF) F) FTIc :- ((g8fL M0ti; p66s (Y) t, l2pp5 bjHzT, fF7Vm (M4RH), nUnlY sx SI, aZqZr enX3 M (SH) (kog (ob gN4) (sW gv9YB (aT4lR p T)) (EgM) gb); hTMZ (fw2y (KYmPJ) (Xfy)) (CFCJ) z)).

vD (jklL (nnMB UIM (lp (LRs) (lKQ (RhNR))) s9 (jU (qfzD dnK (c9 Pz4Kt (BhnEz) r) X) (BL) (k (Y2) CzX) (P))) (okkc Vbzg o1p0)) (cz (c gcE VF4) (N) (H7) (FvK)) rjpD MVli :- rc CN (Uz).

i.
n (K3) (osc FKj kL1).


l HqB Jh U :- oqt (a1oh t); o (B3GQC) (aAf z (h)) QHRoI (mWp v (BcW) (a5f A atC8 L)).

? (rF (BZA) (cmHw (s egVxC (hDyoS (mXD6z (RtAO) (oyObn) (ihAoc dsSxl xOCp (R35)) keQ2Z) m pd N) (w6Mn v2N (TxM)) (I1TZl)))).
